--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,9 +1,8 @@
 <% include ./partials/header.ejs %>
 <div id='formbx'>
+    <span>ADD A QUESTION</span> <i class="fas fa-plus-circle" id="plussign"></i>
     <div id='formcontent'>
-    <h2>ADD A QUESTION</h2>
-     <input type="text" id="qone">  
-     <i class="fas fa-plus-circle" id="plussign"></i>
+        <span class="numhead">1</span><input type="text" id="qnum1">  
     </div>
 </div>
 
@@ -11,46 +10,44 @@
     <div id="inques" >
 <h3>How would you like your answer to be</h3>
 <input type="radio" name="choice" id="chtxtbx">Text box
-<input type="radio" name="choice" id="chemailbx">Email box
+<input type="radio" name="choice" id="chemailbx">Number
 <input type="radio" name="choice" id="chradiobtn">Radio buttons
 <input type="radio" name="choice" id="chcheckbx">Checkbox
+<button id='submitbtn'>Submit</button>
     </div>
     <div id='objects' >
 <input type="text" id="txtfinal" placeholder='text' >
-<input type="email"id="emailfinal" placeholder="email">
-<input type="radio" id='radioin'> <input type="text" id="radionm1" placeholder="name for radio btn"><i class="fas fa-plus-circle" id="plussignrd"></i>
-<input type="checkbox" id='checkbxin'><input type="text" id="checkbxnm1" placeholder="name for check box"><i class="fas fa-plus-circle" id="plussignch"></i>
+<input type="number"id="emailfinal" placeholder="Number">
+<input type="radio" id='radioin1' name='optchrd'> <input type="text" id="radionm1" placeholder="enter opt name"><i class="fas fa-plus-circle" id="plussignrd"></i>
+<input type="checkbox" id='checkbxin1' name='optchcheck'><input type="text" id="checkbxnm1" placeholder="enter opt name"><i class="fas fa-plus-circle" id="plussignch"></i>
     </div>
+    <span id='randd'></span>
 </div>
 
 <script>
-const addChoices =  document.querySelector(`#plussign`);
-      formContent = document.querySelector(`#formcontent`),
+const formContent = document.querySelector(`#formcontent`),
       chTxtBx = document.querySelector(`#chtxtbx`),
       chEmailBx = document.querySelector(`#chemailbx`),
       chRadioBtn = document.querySelector(`#chradiobtn`),
       chCheckBx = document.querySelector(`#chcheckbx`),
       txtFinal = document.querySelector('#txtfinal'),
       emailFinal = document.querySelector('#emailfinal'),
-      radioIn = document.querySelector('#radioin'),
+      radioIn = document.querySelector('#radioin1'),
       radioNm1 = document.querySelector('#radionm1'),
       plusSignRd = document.querySelector('#plussignrd'),
-      checkBxIn = document.querySelector('#checkbxin'),
+      checkBxIn = document.querySelector('#checkbxin1'),
       checkBxNm1 = document.querySelector('#checkbxnm1'),
       plusSignCh = document.querySelector('#plussignch'),
-      objects = document.querySelector(`#objects`);
-      
+      objects = document.querySelector(`#objects`),
+      submitBtn = document.querySelector(`#submitbtn`),
+      rAndD = document.querySelector(`#randd`),
+      plusSign = document.querySelector(`#plussign`),
+      qNum1 = document.querySelector(`#qnum1`);
 
-
-
-
-addChoices.addEventListener(`click`, ()=>{
-    formContent.style.display = ` none `; 
-})
-
-formContent.addEventListener(`click`, ()=>{
-    
-});
+var radiooptcount = 1,
+    checkbxoptcount = 1,
+    valueChoosen,
+    questionNumber = 1;   
 
 chTxtBx.addEventListener(`click`, ()=>{
 
@@ -62,6 +59,7 @@ chTxtBx.addEventListener(`click`, ()=>{
     checkBxNm1.style.display = `none`;
     plusSignCh.style.display = `none`;
     txtFinal.style.display = `inline`;
+    valueChoosen = 1;
 });
 
 chEmailBx.addEventListener(`click`, ()=>{
@@ -74,6 +72,7 @@ chEmailBx.addEventListener(`click`, ()=>{
     plusSignCh.style.display = `none`;
     txtFinal.style.display = `none`;
     emailFinal.style.display = `inline`;
+    valueChoosen = 2;
 });
 
 chRadioBtn.addEventListener(`click`, ()=>{
@@ -86,6 +85,7 @@ chRadioBtn.addEventListener(`click`, ()=>{
     radioIn.style.display = `inline-block`;
     radioNm1.style.display = `inline-block`;
     plusSignRd.style.display = `inline`;
+    valueChoosen = 3;
 });
 
 chCheckBx.addEventListener(`click`, ()=>{
@@ -98,14 +98,88 @@ chCheckBx.addEventListener(`click`, ()=>{
     checkBxIn.style.display = `inline-block`;
     checkBxNm1.style.display = `inline-block`;
     plusSignCh.style.display = `inline`;
+    valueChoosen = 4;
 });
 
 plusSignRd.addEventListener(`click`, ()=>{
-     
-    console.log(objects.innerHTML);
-    objects.innerHTML += `<h1>hi</h1>`;   
+        radiooptcount+=1;
+        objects.insertAdjacentHTML(`beforeend`, `<br class='br${questionNumber}${radiooptcount}'><input type='radio' name='optchrd' id='radioin${questionNumber}${radiooptcount}'><input type='text' placeholder='enter opt name' id='radionm${questionNumber}${radiooptcount}'>`);
+    });
+
+plusSignCh.addEventListener(`click`, ()=>{
+        checkbxoptcount+=1;    
+        objects.insertAdjacentHTML(`beforeend`, `<br class='br${questionNumber}${checkbxoptcount}'><input type='checkbox' name='optchcheck' id='checkbxin${questionNumber}${checkbxoptcount}'><input type='text' placeholder='enter opt name' id='checkbxnm${questionNumber}${checkbxoptcount}'>`);
+        });
+
+submitBtn.addEventListener(`click`, ()=>{
+    
+    if(valueChoosen==1){
+     formContent.insertAdjacentHTML(`beforeend`, `<br><input type="text" name='txt${questionNumber}' placeholder='text' >`);
+     txtFinal.style.display = `none`;
+    }
+    
+    if(valueChoosen==2){
+        formContent.insertAdjacentHTML(`beforeend`,`<br><input type="number" name='num${questionNumber}' placeholder="Number">`);
+        emailFinal.style.display = `none`;
+    }
+
+    if(valueChoosen==3){
+        var optnm='';
+        rAndD.insertAdjacentHTML(`beforeend`,`<input type='radio' name='optchrd${questionNumber}' value='${radioNm1.value}'><span>${radioNm1.value}</span><br>`); 
+        radioIn.style.display = `none`;
+        radioNm1.style.display = `none`;
+        plusSignRd.style.display = `none`;
+        for( var i=2;i<=radiooptcount;++i){
+             optnm  = document.querySelector(`#radionm${questionNumber}${i}`).value;
+             document.querySelector(`#radioin${questionNumber}${i}`).style.display = `none`;
+             document.querySelector(`#radionm${questionNumber}${i}`).style.display = `none`;
+             document.querySelector(`.br${questionNumber}${i}`).style.display = `none`;
+            rAndD.insertAdjacentHTML(`beforeend`, `<input type='radio' name='optchrd${questionNumber}' value='${optnm}'><span>${optnm}</span><br>`)
+        }
+    formContent.insertAdjacentHTML(`beforeend`, `<br>${rAndD.innerHTML}`);
+    rAndD.innerHTML = '';
+    radiooptcount = 1;
+   }
+    
+    if(valueChoosen==4){
+        var optnm
+        rAndD.insertAdjacentHTML(`beforeend`, `<input type='checkbox' name='optchchbx${questionNumber}' value='${checkBxNm1.value}'><span>${checkBxNm1.value}</span><br>`)
+        checkBxIn.style.display = `none`;
+        checkBxNm1.style.display = `none`;
+        plusSignCh.style.display = `none`;
+        for( var j= 2;j<=checkbxoptcount;++j){
+            optnm  = document.querySelector(`#checkbxnm${questionNumber}${j}`).value;
+             document.querySelector(`#checkbxin${questionNumber}${j}`).style.display = `none`;
+             document.querySelector(`#checkbxnm${questionNumber}${j}`).style.display = `none`;
+             document.querySelector(`.br${questionNumber}${j}`).style.display = `none`;
+            rAndD.insertAdjacentHTML(`beforeend`, `<input type='checkbox' name='optchchbx${questionNumber}' value='${optnm}'><span>${optnm}</span><br>`)
+        }
+    formContent.insertAdjacentHTML(`beforeend`, `<br>${rAndD.innerHTML}`);
+    rAndD.innerHTML = '';
+    checkbxoptcount = 1;
+     }
 });
- 
+
+plusSign.addEventListener(`click`, ()=>{
+questionNumber+=1;
+formContent.insertAdjacentHTML(`beforeend`, `<br><span class='numhead'>${questionNumber}</span><input type='text' id='qnum${questionNumber}'>`);
+this.qDom = document.querySelector(`#qnum${questionNumber}`);
+qDom.addEventListener(`keydown`, (event)=>{
+    if(event.which==13)
+{
+    formContent.insertAdjacentHTML(`beforeend`, `<span>${qDom.value}</span>`);
+    qDom.style.display = `none`;
+}
+});
+});
+
+qNum1.addEventListener(`keydown`, (event)=>{
+if(event.which==13)
+{
+    formContent.insertAdjacentHTML(`beforeend`, `<span>${qNum1.value}</span>`);
+    qNum1.style.display = `none`;
+}
+});
 </script>
 
 <% include ./partials/footer.ejs %> 
