--- a/public/style.css
+++ b/public/style.css
@@ -15,10 +15,15 @@ z-index: 0;
 }
 
 #quesbx{
+    position: absolute;
+    top: 50%;
+    left: 25%;
     border: 2px solid black;
+    background-color: azure;
     padding-bottom: 1%;
     width: 50%;
     margin: 0 auto; 
+    display: none;
 }
 #objects{
     margin-top: 5%;
@@ -61,17 +66,6 @@ z-index: 0;
     display: none;
 }
 
-/* #chtxtbx{
+#prompt{
     display: none;
 }
-#chemailbx{
-    display: none;
-}
-
-#chradiobtn{
-    display: none;
-}
-
-#chcheckbx{
-    display: none;
-} */
