--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,4 +2,6 @@
 <h1>Dashboard</h1>
 <a href="/form">Create Form</a>
 <a href="/logout">Logout</a>
+<a href="/view">View</a>
+
 <% include ./partials/footer.ejs %>
