--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,6 @@
-#formbx{
-    height: 100%;
-    width: 50%;
-    margin: 0 auto;
-    border: 2px solid black;
-    padding: 5%;
-}
-
-#formcontent{
-z-index: 0;
-}
 
 .numhead{
-    font-size: 2rem;
+    font-size: 1rem;
 }
 
 #quesbx{
@@ -20,7 +9,7 @@ z-index: 0;
     left: 25%;
     border: 2px solid black;
     background-color: azure;
-    padding-bottom: 1%;
+    padding: 1%;
     width: 50%;
     margin: 0 auto; 
     display: none;
@@ -68,4 +57,45 @@ z-index: 0;
 
 #prompt{
     display: none;
+}
+
+#signuppg{
+position: absolute;
+top: 30%;
+left: 40%;
+width: 20%;
+height: 40%;
+border: 5px solid #22b5e6;
+background-color: #f5f1f0;
+}
+
+#emailuser{
+    width: 70%;
+}
+
+#passworduser{
+    width: 70%;
+}
+
+#submitbtnsiup{
+    width: 25%;
+}
+
+.positionbx{
+    height: 100%;
+    background-image: url('https://images.unsplash.com/photo-1544631008-534b4b6c1215?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=605&q=80');   
+    background-size: cover;
+    background-repeat: no-repeat; 
+    opacity: 1;
+}
+
+#dashimg{
+    margin: 0% auto;
+    color: black;
+    height: 30%;
+    width: 50%;
+    padding-top: 2%;
+    background-image: url('https://images.unsplash.com/photo-1556124245-18ee67637874?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1339&q=80');
+    border: 2px solid black;
+    border-radius: 10px;
 }
