--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,7 +1,11 @@
-<% include ./partials/header.ejs %>
-<h1>Dashboard</h1>
-<a href="/form">Create Form</a>
-<a href="/logout">Logout</a>
-<a href="/view">View</a>
+<% include ./partials/headernav.ejs %>
+
+<div id='dashimg' style="position: relative; top: 15%;">
+    <div style="padding: 2%" >
+          <h1 style='font-size: 4rem'>Create Forms effortlessly</h1>
+          <br>
+          <p style="font-size: 2rem">You are just one click away from creating your own form.</p>
+    </div>
+</div>
 
 <% include ./partials/footer.ejs %>
